Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-132748

Random assert fail in tst_qhttpserverrequestfilter

XMLWordPrintable

    • 69a644450 (dev), 48dedd8e0 (6.9), 324e3e327 (6.9.0)
    • Foundation Sprint 127

      This assert has been seen twice in a nightly health check:

      agent:2025/01/12 23:12:52 build.go:404: QFATAL : tst_QHttpServerRequestFilter::testRateLimit() ASSERT: "!isUnused()" in file /home/qt/work/install/include/QtCore/qhash.h, line 795
      agent:2025/01/12 23:12:52 build.go:404: FAIL!  : tst_QHttpServerRequestFilter::testRateLimit() Received a fatal error.
      

      Integration: https://testresults.qt.io/coin/integration/qt/qt5/tasks/nightly1736718302
      Full log: https://testresults.qt.io/coin/api/log/qt/qthttpserver/a797e6dbd74621426cfa880b0877e6045be7bff3/LinuxopenSUSE_15_6x86_64LinuxopenSUSE_15_6x86_64GCCqtci-linux-openSUSE-15.6-x86_64-51-76ddb2PinCores_Sccache_UseAddressSanitizer_UseConfigure_WarningsAreErrors/020065856a99cbd4637dfe8333a1889bfdbac987/forceRun/test_1736724142/log.txt.gz

        For Gerrit Dashboard: QTBUG-132748
        # Subject Branch Project Status CR V

            lenabiliaieva Olena Biliaieva
            jujokini Jukka Jokiniva
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes