QHttpServer: Fix segmentation fault in tst_qhttpserverrequestfilter

QHash::erase seems to invalidate previously stored iterator, fixed by
cleaning the hash after the work with the iterator is done.

Fixes: QTBUG-132748
Pick-to: 6.9 6.9.0
Change-Id: Ib1202e138008e7134fc624fe02f4c056fca70f5b
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>